added background image and finalized html and css template

--- a/css/layout.css
+++ b/css/layout.css
@@ -4,8 +4,13 @@
 }
 
 body {
+    background-image: url("/images/decorative-1221446_1280.jpg");
+    background-size: contain;
+    background-repeat: repeat-y;
     box-sizing: border-box;
     color:#1f1838;
+    padding: 0px;
+    margin: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -24,10 +29,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main-content {
-    min-height: calc(100vh - 58px); 
+    min-height: calc(100vh - 50px); 
 }
 
 .nav {
+    width: 100%;
     background-color: #40162e;
     color: rgb(236, 233, 233);
     font-family: 'Eagle Lake', cursive;
