--- a/css/products-styles.css
+++ b/css/products-styles.css
@@ -1,4 +1,26 @@
 .product-container {
     margin: 1em auto;
     width: 80%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto ;
+    grid-gap: .3em .5em;
+    grid-auto-flow: row;
+    /* justify-items: start; */
+}
+
+.product {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 1fr;
+    /* grid-column-end: -1; */
+    /* justify-items: start; */
+}
+
+.product p {
+    margin: .2em 0px;
+}
+
+.side-effects {
+    font-size: .7em;
 }
