--- a/css/history-styles.css
+++ b/css/history-styles.css
@@ -1,11 +1,11 @@
 .history-entry{
-    background-color: hsla(324, 49%, 17%, 0.616);    
+    /* background-color: hsla(324, 49%, 17%, 0.616);     */
     display: grid;
     grid-template-columns: auto 200px;
-    width: 90%;
+    width: 80%;
     border-radius: 10px;
     padding: 4px;
-    margin: 5px 5px 5px 30px;
+    margin: 10px 5px 5px 140px;
 }
 .history-entry img {
     width: 200px
