--- a/css/layout.css
+++ b/css/layout.css
@@ -25,7 +25,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header h1 {
-    margin-bottom: .2em;    
+    margin-bottom: .2em;  
+    text-align: center;  
 }
 
 .main-content {
@@ -72,3 +73,36 @@ h1, h2, h3, h4, h5, h6 {
 #gmail-logo {
     margin-bottom: .2em;
 }
+
+/* .elixir img {
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    padding: 10px 20px;
+} */
+
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+.gallery h2  {
+    padding: 15px;
+    text-align: center;
+
+}
+
+.gallery p  {
+    padding: 15px;
+    text-align: center;
